--- a/chronograf.html
+++ b/chronograf.html
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap"> 
-        <link href="css/theme.css" rel="stylesheet" type="text/css"> 
-        <link href="css/section.css" rel="stylesheet" type="text/css"> 
+        <link href="../css/theme.css" rel="stylesheet" type="text/css"> 
+        <link href="../css/section.css" rel="stylesheet" type="text/css"> 
     </head>     
     <body> 
         <header> 
@@ -21,42 +21,42 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
-            </button>             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
+            </button>             <a href="../index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
-                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
+                <li> <a href="../stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
                 </li>                 
-                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
+                <li> <a href="../prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
                 </li>                 
-                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a> 
+                <li> <a href="../lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a> 
                 </li>                 
-                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
+                <li> <a href="../dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
+                <li> <a href="../notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
                 </li>                 
-                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a> 
+                <li> <a href="../kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
+                <li> <a href="./chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </nav>         
         <div id="menu-overlay"></div>         
         <div id="offcanvas-menu"> 
             <ul> 
-                <li> <a href="stand.html">STANDPUNKT</a> 
+                <li> <a href="../stand.html">STANDPUNKT</a> 
                 </li>                 
-                <li> <a href="prawo.html">PRAWO</a> 
+                <li> <a href="../prawo.html">PRAWO</a> 
                 </li>                 
-                <li> <a href="lokalnie.html">LOKALNIE</a> 
+                <li> <a href="../lokalnie.html">LOKALNIE</a> 
                 </li>                 
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a> 
+                <li> <a href="../dobrze.html">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a> 
+                <li> <a href="../notpl.html">OBYWATELE NIE PL</a> 
                 </li>                 
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a> 
+                <li> <a href="../kartka.html">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a> 
+                <li> <a href="./chronograf.html">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </div>         
@@ -70,40 +70,16 @@
             <div class="main-content"> 
                 <div class="ads google article-top-ad"> 
 </div>                 
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Gdański Łabędź, czyli o tych, których już nie liczymy</h1> 
-                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
-        Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności&nbsp;&nbsp;</p> 
-                <p class="author-date">Redakcja| Data publikacji: 26 lipca 2025</p> 
-                <img src="https://i.postimg.cc/qMkJBWh5/sw22.jpg?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
-                <p class="image-caption">The King’s Swan Marker David Barber mit einem seiner Schützlingen Picture Alliance</p> 
+                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Triebwagen 8: lebende Gedächtnismaschine der Niederstadt</h1> 
+                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter</p> 
+                <p class="author-date">Autor: Olen Kieruch| Data publikacji: 26 lipca 2025</p> 
+                <img src="https://i.postimg.cc/ydxM4rty/tr8-nd.png?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
+                <p class="image-caption">The City of Lost Heaven</p> 
                 <div class="article-body"> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
-          Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności (dziś to Karol III). Ale nie o monarchię chodzi, a o ekologię.
-          Ptaki są ważone, obrączkowane, opisywane. Dzieci klaszczą. Londyn liczy łabędzie.&nbsp;</p> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">A w Gdańsku?
-          Gdańsk kiedyś był inny. Nie tylko miejski, lecz alter miejski. W Stawach Królewskich, tam gdzie woda pachniała historią, łabędzie pływały spokojnie — a obywatele dobrze ubrani kupowali karneczki z datą ważności, by karmić nie chlebem z folii, lecz ziarnem z lnianej torby. Nie sypali jedzenia — składali je u brzegu.
-          W Gdańsku to łabędzie liczyły ludzi.
-          Niektórych więcej niż raz – bo przynosili prawdziwe jedzenie.
-          Nie spleśniały chleb z Biedronki. Nie chipsy w folii.
-          Przychodzili w deszczu, w grudniowy mróz, bez selfie-sticków, bez relacji live.
-          Łabędzie znały tych, którzy próbowali chronić Motławę.
-          Tych, co przeganiali psy.
-          Tych, co odważyli się przegonić właścicieli psów.
-          Ale z roku na rok było ich mniej.
-          Mniej ptaków. Mniej ludzi.
-          W końcu nie było już na kogo liczyć.
-          I nie było komu liczyć.</p> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Odleciały.
-          Może do Schwangau, gdzie w herbie łabędź, a na zamku duch Ludwika II.
-          Może do Brabancji, gdzie grają marsz weselny Wagnera –
-          którego dziś nie chcą słuchać, bo Wagner nie lubił Parady Równości,
-          która idzie przez współczesny Gdańsk.
-          Może do Londynu, by dać się zważyć i wpisać do systemu.
-          Może do Wolnego Miasta Gdańska – którego już nie ma.
-          Ale to najdłuższy lot – i podjęli go tylko nieliczni. </p> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">&nbsp;Na Dolnym Mieście zostały opakowania po chipsach,
-          psy z właścicielami, których już nie da się odróżnić – kto pies, kto pan.
-          Między popękanymi wieżyczkami Śluzy pływają kajaki i puste butelki po energetykach. I nikt już nie mówi: &bdquo;Tam, przy moście, był łabędź. Duży, biały. Nie bał się ludzi.&rdquo;</p> 
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen. Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanäle, Brücken &ndash; sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte.&nbsp;</p> 
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Jeder Stein atmet vergangene Zeit. Einst, als die Niederstadt anders war, trug er Fabrikarbeiter, Kaufleute, Menschen, die zwar in Eile, ale nikht hetzend unterwegs waren. Jetzt transportiert er andere &ndash; jene, die gedenken, und jene, die entdecken wollen, was kein Reiseführer je verrät. Fassaden ziehen vorbei und flüstern mehr als jede Infotafel. Wer mag zählen, wie viele Gesichter er sah, wie viele er weitertrug, wie viele zurückrief und wie viele weiterzogen, ohne eine Sekunde zu verweilen.
+Die Niederstadt war anders. Wo heute Stille herrscht, tobte einst das Leben. Wo jetzt Feuchtigkeit glitzert, wogten Menschenmassen. Wandel kam nicht als Befehl, sondern schlich heran. Niemand rief &bdquo;Sanierung&ldquo;, denn kaum jemand fragte nach Notwendigkeit. Mauern bekleideten sich neu, Gassen empfingen frische Wanderer. Alte Wände schwieg&rsquo;n, als sei längst alles gesagt.
+Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen &ndash; um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt.&nbsp;</p> 
                 </div>                 
                 <div class="article-actions"> 
                     <p><a href="#">[ Read on one page ]</a></p> 
