--- a/de/kartka.html
+++ b/de/kartka.html
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap"> 
-        <link href="../css/theme.css" rel="stylesheet" type="text/css"> 
-        <link href="../css/section.css" rel="stylesheet" type="text/css"> 
+        <link href="css/theme.css" rel="stylesheet" type="text/css"> 
+        <link href="css/section.css" rel="stylesheet" type="text/css"> 
     </head>     
     <body> 
         <header> 
@@ -22,30 +22,30 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
             </button>             
-            <a href="../index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
+            <a href="index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
                 <li>
-                    <a href="../stand.html">STANDPUNKT</a>
+                    <a href="stand.html">STANDPUNKT</a>
                 </li>                 
                 <li>
-                    <a href="../prawo.html">PRAWO</a>
+                    <a href="prawo.html">PRAWO</a>
                 </li>                 
                 <li>
-                    <a href="../lokalnie.html">LOKALNIE</a>
+                    <a href="lokalnie.html">LOKALNIE</a>
                 </li>                 
                 <li>
-                    <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
+                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
                 <li>
-                    <a href="../notpl.html">OBYWATELE NIE PL</a>
+                    <a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
                 <li>
-                    <a href="../kartka.html">KARTKA Z HISTORII</a>
+                    <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
                 <li>
-                    <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </nav>         
@@ -53,25 +53,25 @@
         <div id="offcanvas-menu"> 
             <ul> 
                 <li>
-                    <a href="../stand.html">STANDPUNKT</a>
+                    <a href="stand.html">STANDPUNKT</a>
                 </li>                 
                 <li>
-                    <a href="../prawo.html">PRAWO</a>
+                    <a href="prawo.html">PRAWO</a>
                 </li>                 
                 <li>
-                    <a href="../lokalnie.html">LOKALNIE</a>
+                    <a href="lokalnie.html">LOKALNIE</a>
                 </li>                 
                 <li>
-                    <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
+                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>                 
                 <li>
-                    <a href="../notpl.html">OBYWATELE NIE PL</a>
+                    <a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>                 
                 <li>
-                    <a href="../kartka.html">KARTKA Z HISTORII</a>
+                    <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>                 
                 <li>
-                    <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>                 
             </ul>             
         </div>         
@@ -85,16 +85,15 @@
             <div class="main-content"> 
                 <div class="ads google article-top-ad"> 
                     </div>                 
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Triebwagen 8: lebende Gedächtnismaschine der Niederstadt</h1> 
-                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter</p> 
-                <p class="author-date">Autor: Olen Kieruch| Data publikacji: 26 lipca 2025</p> 
-                <img src="https://i.postimg.cc/ydxM4rty/tr8-nd.png?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
-                <p class="image-caption">The City of Lost Heaven</p> 
+                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Jak powstało Trójmiasto.</h1> 
+                <p class="lead" style="font-size: 16px;">Jak narodziła się idea Trójmiasta ?</p> 
+                <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p> 
+                <img src="https://i.postimg.cc/PrC5zSqZ/3city-online.jpg" alt="Duży obraz artykułu" class="article-main-image"> 
+                <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p> 
                 <div class="article-body"> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen. Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanäle, Brücken &ndash; sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte.&nbsp;</p> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Jeder Stein atmet vergangene Zeit. Einst, als die Niederstadt anders war, trug er Fabrikarbeiter, Kaufleute, Menschen, die zwar in Eile, ale nikht hetzend unterwegs waren. Jetzt transportiert er andere &ndash; jene, die gedenken, und jene, die entdecken wollen, was kein Reiseführer je verrät. Fassaden ziehen vorbei und flüstern mehr als jede Infotafel. Wer mag zählen, wie viele Gesichter er sah, wie viele er weitertrug, wie viele zurückrief und wie viele weiterzogen, ohne eine Sekunde zu verweilen.
-Die Niederstadt war anders. Wo heute Stille herrscht, tobte einst das Leben. Wo jetzt Feuchtigkeit glitzert, wogten Menschenmassen. Wandel kam nicht als Befehl, sondern schlich heran. Niemand rief &bdquo;Sanierung&ldquo;, denn kaum jemand fragte nach Notwendigkeit. Mauern bekleideten sich neu, Gassen empfingen frische Wanderer. Alte Wände schwieg&rsquo;n, als sei längst alles gesagt.
-Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen &ndash; um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt.&nbsp;</p> 
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Jak narodziła się idea Trójmiasta ?  Pomysł  połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska. Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p> 
+                    <p>W 1950 roku powołano Związek Miast Bałtyckich, który miał koordynować rozwój gospodarczy i kulturalny regionu. W ramach tego związku, Gdańsk, Gdynia i Sopot zaczęły wspólnie planować inwestycje, rozwijać infrastrukturę i promować się jako spójny obszar turystyczny. Powstały wspólne plany zagospodarowania przestrzennego, rozwijano sieć komunikacji miejskiej, a także organizowano wspólne imprezy kulturalne i sportowe.</p> 
+                    <p>Idea Trójmiasta była odpowiedzią na potrzeby dynamicznego rozwoju regionu oraz na dążenie do efektywniejszego zarządzania jego zasobami. Dzięki współpracy, miasta mogły lepiej wykorzystywać swoje potencjały, unikać dublowania inwestycji i tworzyć spójną ofertę dla mieszkańców i turystów. To doprowadziło do powstania unikalnej metropolii, która stała się symbolem powojennego odrodzenia i integracji.</p> 
                 </div>                 
                 <div class="article-actions"> 
                     <p><a href="#">[ Read on one page ]</a></p> 
@@ -118,15 +117,15 @@ Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt
 </iframe>                     
                 </div>                 
                 <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
-                <div class="support-newsletter-section"> 
-                    <iframe 
-                      src="support.html" 
-                      width="100%" 
-                      height="180" 
-                      style="border: none; max-width: 280px; display: block; margin: 0 auto;" 
+                <div class="support-newsletter-section">
+                    <iframe
+                      src="support.html"
+                      width="100%"
+                      height="180"
+                      style="border: none; max-width: 280px; display: block; margin: 0 auto;"
                       scrolling="no">
                     </iframe>
-                </div>                 
+                </div>
                 <div class="ads google sidebar-bottom-ad"> 
                     <p>Reklama Google (na dole sidebara)</p> 
                 </div>                 
@@ -134,15 +133,15 @@ Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt
         </div>         
         <div class="mobile-bottom-gadgets-container"> 
             <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
-            <div class="support-newsletter-section"> 
-                <iframe 
-                  src="support.html" 
-                  width="100%" 
-                  height="180" 
-                  style="border: none; max-width: 280px; display: block; margin: 0 auto;" 
+            <div class="support-newsletter-section">
+                <iframe
+                  src="support.html"
+                  width="100%"
+                  height="180"
+                  style="border: none; max-width: 280px; display: block; margin: 0 auto;"
                   scrolling="no">
                 </iframe>
-            </div>             
+            </div>
             <div class="ads google sidebar-bottom-ad"> 
                 <p>Reklama Google (na dole sidebara)</p> 
             </div>             
