--- a/de/lokalnie.html
+++ b/de/lokalnie.html
@@ -22,7 +22,7 @@
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
                 </svg>
             </button>
-            <a href="index.html" class="header-link"> <h1 style="font-size: 14px; font-family: 'Libre Baskerville', serif;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a>
+            <a href="index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a>
         </header>
         <nav class="main-nav">
             <ul>
@@ -84,32 +84,24 @@
         <div class="main-layout-wrapper">
             <div class="main-content">
                 <div class="ads google article-top-ad">
-                </div>
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Spacer po Neugarten , Gdańsk, godzina 09:45, poranek mglisty</h1>
-                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Idę wolno wzdłuż Neugarten &ndash; dziś Nowe Ogrody. To nie jest ulica spacerowa. To pas transmisyjny historii.</p>
-                <p class="author-date" style="font-family: 'Merriweather', serif;">Autor: Oskar Reile| Data publikacji: 26 lipca 2025</p>
-                <img src="https://i.postimg.cc/QVGkmHcW/reile.png?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image">
-                <p class="image-caption">Oskar Reile</p>
+                    </div>
+                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Festiwal Kina Plenerowego w Sopocie &ndash; morze, ekran i leżaki.</h1>
+                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciół Sopotu zamienia się w coś więcej niż deptak &ndash; w kino pod gołym niebem.</p>
+                <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
+                <img src="https://i.postimg.cc/fb2PKfyt/kino809535.jpg?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image">
+                <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
                 <div class="article-body">
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Idę wolno wzdłuż Neugarten &ndash; dziś Nowe Ogrody. To nie jest ulica spacerowa. To pas transmisyjny historii. Dziś w oknach tylko rolety i kiosk Ruch, parking Komisariatu policji. Ale ja pamiętam. Tu, przy jednym z narożników tej alei, mieściła się główna siedziba Komisariatu Generalnego Rzeczypospolitej Polskiej w Wolnym Mieście Gdańsku&ndash; instytucja o statusie dyplomatycznym, lecz duszy operacyjnej. Tu krążyły nazwiska. Tu rozdzielano walizy z dokumentami do Neuteich, słano meldunki koleją do Warszawy. I właśnie stąd... szły rozmowy. Zwyczajne, oficjalne, czyste. Tyle że ja ich słyszałem.&nbsp;</p>
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Nie podsłuchiwaliśmy ich w samym gmachu &ndash; był zbyt dobrze chroniony. Ale na odcinku sieciowym, między Neugarten a Zentralamt.
-Fernsprechdienststelle, w skrócie FSD &ndash; punkt kontrolny rozmów telefonicznych miasta. Oficjalnie zarządzany przez Städtische Telegraphenverwaltung, ale wszyscy wiedzieli, że po 1925 przejęła to policja. Mój współpracownik z urzędu pocztowego &ndash; nazwijmy go &bdquo;Gustav&rdquo; &ndash; pokazał mi miejsce, gdzie wchodzą linie: szare, grube przewody ze znacznikiem &bdquo;D&rdquo; i &bdquo;PL&rdquo;. W rogu stała skrzynka z przełącznikami &ndash; przekładnia jak w starych tramwajach. Wystarczyło tylko docisnąć mosiężny styk i zakładało się &bdquo;cichy słuchacz&rdquo;.
-Podsłuch miał dwie wersje: pasywną &ndash; przez wpięcie w linię do pokoju&nbsp; w prezydium policji przy Karrenwall 9, pokój 74 . Tam siedziałem ja.
-Słyszałem każde słowo. Czasem z trzaskiem. Czasem z echem porcelany.
-I aktywną &ndash; gdy jeden z naszych operatorów ręcznie nadzorował sesję.
-Pamiętam pierwsze słowa usłyszane przez kabel:
-&bdquo;...meldunek idzie dopiero po konferencji z komisariatem...&rdquo;
-To był głos attaché do spraw morskich. Chłodny, lekko nosowy. Pisałem jego intonację w notesie.</p>
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Ciekawostki operacyjne. Najwięcej kompromitujących informacji uzyskiwaliśmy nie z samego komisarza, ale z jego sekretarki &ndash; która miała nawyk czytania instrukcji na głos do słuchawki. Linia pomocnicza &ndash; do kuchni komisariatu , okazała się niezabezpieczona. To tam usłyszałem kiedyś, że &bdquo;Pan X nie dojechał z Gdyni &ndash; zatrzymany na Orłowie z walizką papierów&rdquo;. Na podsłuchu raz słyszałem... śmiech. Cztery kobiety, które przyniosły dokumenty i... zaczęły czytać na głos artykuł z &bdquo;Kurier Gdański&rdquo;. Zamiast szyfrów &ndash; przepisy na piernik toruński.
-Dziś Nowe Ogrody tętnią ruchem. Tramwaje, kebaby, pasy rowerowe.
-Ludzie przechodzą tędy bez świadomości, że każdy metr tej jezdni niósł kiedyś podsłuchane słowo, które zmieniało szyfry, decyzje, życia&hellip;</p>
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Po takich godzinach podsłuchu trzeba było wyjść. I szedłem wtedy zwykle na kawę. Tym razem nie na spotkanie. Nie po szyfr. Po ciszę&hellip;
-Danziger Hof stał na skrzyżowaniu Am Graben i Langer Markt, Fasada &ndash; monumentalna, kamienna, czysta. Złocona litera &bdquo;H&rdquo; na baldachimie.
-Wchodziłem zawsze głównym wejściem. Za recepcją po lewej &ndash; winda z obsługą. Po prawej &ndash; kawiarnia z widokiem na Dworzec Główny.
-Zajmowałem zwykle stolik trzeci od okna. Kelner wiedział &ndash; kawa czarna, mocna, bez cukru. Nosił białe rękawiczki i zegarek kieszonkowy z łańcuszkiem.
-W kącie grał fortepian &ndash; czasem tylko ćwierkał do siebie. Przysiadały się czasem panie z gazetami. Rozmawiały o Paryżu. O butiku z tkaninami na Lange Gasse.
-A ja patrzyłem na ściany: czerwony welur, mosiężne kinkiety, menu po niemiecku i francusku.
-I myślałem, że to jest miasto, które gra operę i inwigilację jednocześnie.&nbsp;</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Od poniedziałku do soboty, zawsze o zmierzchu, zaczyna się seans w ramach Festiwalu Kina Plenerowego. Początek &ndash; około 21:30, gdy słońce zniknie za Grand Hotelem. Wstęp wolny, nie ma rezerwacji, nie ma biletów &ndash; kto pierwszy, ten siedzi na leżaku. Kto drugi &ndash; siada na kocu.</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Repertuar?
+Kino morskie, podróżnicze i klasyka. Dokumenty o rybakach i opowieści o podróżnikach. W tym tygodniu:
+&ndash; poniedziałek: &bdquo;Atlantyk&rdquo; (reż. Jan-Willem van Ewijk)
+&ndash; środa: &bdquo;Głosy z głębin&rdquo; &ndash; film archiwalny o kutrach dalekomorskich
+&ndash; piątek: &bdquo;Kronika Bałtycka&rdquo; &ndash; przegląd filmów o Trójmieście z lat 1950&ndash;1980
+&ndash; sobota: &bdquo;Pod pokładem&rdquo; &ndash; dramat współczesny z portu Gdynia. Organizatorzy rozstawiają ekrany, nagłośnienie i stoiska z lokalnym popcornem &ndash; produkowanym na bazie kaszubskiej kukurydzy, sprzedawanym w szarych torebkach z pieczątką.
+
+W tle słychać szum morza i czasem &ndash; muzykę z restauracji przy Monciaku. Ale to nie przeszkadza. To klimat.
+To Sopot nocą &ndash; bez szpilek, bez parawanów.
+Tylko film, sól w powietrzu i niebo pełne ekranowego światła.&nbsp;</p>
                 </div>
                 <div class="article-actions">
                     <p><a href="#">[ Read on one page ]</a></p>
@@ -163,7 +155,7 @@ I myślałem, że to jest miasto, które gra operę i inwigilację jednocześnie
             </div>
         </div>
         <footer>
-        </footer>
+            </footer>
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
