--- a/de/kartka.html
+++ b/de/kartka.html
@@ -21,57 +21,42 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
-            </button>             
-            <a href="index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
+            </button>             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
-                <li>
-                    <a href="stand.html">STANDPUNKT</a>
+                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
                 </li>                 
-                <li>
-                    <a href="prawo.html">PRAWO</a>
+                <li> <a href="prawo.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">PRAWO</a> 
                 </li>                 
-                <li>
-                    <a href="lokalnie.html">LOKALNIE</a>
+                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a> 
                 </li>                 
-                <li>
-                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li>
-                    <a href="notpl.html">OBYWATELE NIE PL</a>
+                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
                 </li>                 
-                <li>
-                    <a href="kartka.html">KARTKA Z HISTORII</a>
+                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li>
-                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </nav>         
         <div id="menu-overlay"></div>         
         <div id="offcanvas-menu"> 
             <ul> 
-                <li>
-                    <a href="stand.html">STANDPUNKT</a>
+                <li> <a href="stand.html">STANDPUNKT</a> 
                 </li>                 
-                <li>
-                    <a href="prawo.html">PRAWO</a>
+                <li> <a href="prawo.html">PRAWO</a> 
                 </li>                 
-                <li>
-                    <a href="lokalnie.html">LOKALNIE</a>
+                <li> <a href="lokalnie.html">LOKALNIE</a> 
                 </li>                 
-                <li>
-                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li>
-                    <a href="notpl.html">OBYWATELE NIE PL</a>
+                <li> <a href="notpl.html">OBYWATELE NIE PL</a> 
                 </li>                 
-                <li>
-                    <a href="kartka.html">KARTKA Z HISTORII</a>
+                <li> <a href="kartka.html">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li>
-                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </div>         
@@ -84,7 +69,7 @@
         <div class="main-layout-wrapper"> 
             <div class="main-content"> 
                 <div class="ads google article-top-ad"> 
-                    </div>                 
+</div>                 
                 <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Jak powstało Trójmiasto.</h1> 
                 <p class="lead" style="font-size: 16px;">Jak narodziła się idea Trójmiasta ?</p> 
                 <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p> 
@@ -93,7 +78,13 @@
                 <div class="article-body"> 
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">Jak narodziła się idea Trójmiasta ?  Pomysł  połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska. Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p> 
                     <p>W 1950 roku powołano Związek Miast Bałtyckich, który miał koordynować rozwój gospodarczy i kulturalny regionu. W ramach tego związku, Gdańsk, Gdynia i Sopot zaczęły wspólnie planować inwestycje, rozwijać infrastrukturę i promować się jako spójny obszar turystyczny. Powstały wspólne plany zagospodarowania przestrzennego, rozwijano sieć komunikacji miejskiej, a także organizowano wspólne imprezy kulturalne i sportowe.</p> 
-                    <p>Idea Trójmiasta była odpowiedzią na potrzeby dynamicznego rozwoju regionu oraz na dążenie do efektywniejszego zarządzania jego zasobami. Dzięki współpracy, miasta mogły lepiej wykorzystywać swoje potencjały, unikać dublowania inwestycji i tworzyć spójną ofertę dla mieszkańców i turystów. To doprowadziło do powstania unikalnej metropolii, która stała się symbolem powojennego odrodzenia i integracji.</p> 
+                    <p>Idea Trójmiasta była odpowiedzią na potrzeby dynamicznego rozwoju regionu oraz na dążenie do efektywniejszego zarządzania jego zasobami. Dzięki współpracy, miasta mogły lepiej wykorzystywać swoje potencjały, unikać dublowania inwestycji i tworzyć spójną ofertę dla mieszkańców i turystów. To doprowadziło do powstania unikalnej metropolii, która stała się symbolem powojennego odrodzenia i integracji</p>
+                    <p>.Wspólna polityka Trójmiasta pozwoliła nie tylko na rozwój kultury, ale przede wszystkim na zintegrowanie transportu i logistyki. Już w latach 60. rozpoczęto budowę układu drogowego łączącego Gdańsk, Sopot i Gdynię &mdash; dzisiejszej Drogi Zielonej i Trasy Kwiatkowskiego. System SKM (Szybka Kolej Miejska) stał się kręgosłupem komunikacji aglomeracyjnej, umożliwiając szybki dojazd między dzielnicami i miastami. Do dziś stanowi on przykład efektywnego systemu transportu publicznego.
+Trójmiasto jako centrum edukacyjne i technologiczne
+Oprócz rozwoju urbanistycznego, region postawił na naukę i nowoczesność. Powstały uczelnie o znaczeniu krajowym i międzynarodowym: Politechnika Gdańska, Uniwersytet Gdański czy Akademia Morska w Gdyni. Dzięki współpracy akademickiej z przemysłem morskim i nowoczesnymi technologiami, Trójmiasto zaczęło przyciągać inwestycje z sektora IT, finansów i logistyki.
+Idea Trójmiasta była odpowiedzią na potrzeby dynamicznego rozwoju regionu oraz na dążenie do efektywniejszego zarządzania jego zasobami. Dzięki współpracy, miasta mogły lepiej wykorzystywać swoje potencjały, unikać dublowania inwestycji i tworzyć spójną ofertę dla mieszkańców i turystów. To doprowadziło do powstania unikalnej metropolii, która stała się symbolem powojennego odrodzenia i integracji. turystycznej. </p>
+                    <p>Trójmiasto regularnie pojawia się w zestawieniach najlepszych miejsc do życia i odwiedzin w Europie Środkowo-Wschodniej. Wspólna oferta kulturalna, nadmorski charakter, dostęp do plaż i lasów, a także dziedzictwo historyczne i nowoczesna gastronomia sprawiają, że region przyciąga nie tylko turystów, ale też inwestorów i nowych mieszkańców.
+Jeśli planujesz podróż do Trójmiasta &ndash; sprawdź dostępne noclegi i propozycje zwiedzania online</p> 
                 </div>                 
                 <div class="article-actions"> 
                     <p><a href="#">[ Read on one page ]</a></p> 
@@ -116,38 +107,28 @@
                     <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
 </iframe>                     
                 </div>                 
-                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
-                <div class="support-newsletter-section">
-                    <iframe
-                      src="support.html"
-                      width="100%"
-                      height="180"
-                      style="border: none; max-width: 280px; display: block; margin: 0 auto;"
-                      scrolling="no">
-                    </iframe>
-                </div>
+                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>                 
+                <div class="support-newsletter-section"> 
+                    <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
+</iframe>                     
+                </div>                 
                 <div class="ads google sidebar-bottom-ad"> 
                     <p>Reklama Google (na dole sidebara)</p> 
                 </div>                 
             </aside>             
         </div>         
         <div class="mobile-bottom-gadgets-container"> 
-            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
-            <div class="support-newsletter-section">
-                <iframe
-                  src="support.html"
-                  width="100%"
-                  height="180"
-                  style="border: none; max-width: 280px; display: block; margin: 0 auto;"
-                  scrolling="no">
-                </iframe>
-            </div>
+            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>             
+            <div class="support-newsletter-section"> 
+                <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
+</iframe>                 
+            </div>             
             <div class="ads google sidebar-bottom-ad"> 
                 <p>Reklama Google (na dole sidebara)</p> 
             </div>             
         </div>         
         <footer> 
-            </footer>         
+</footer>         
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
