--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
-            </button>             
-            <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px; text-transform: uppercase;">GDAŃSKI&nbsp;<img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf">&nbsp;REPORTER</h1> </a> 
+            </button>             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px; text-transform: uppercase;">GDAŃSKI&nbsp;<img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf">&nbsp;REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
@@ -36,15 +35,15 @@
                 </li>                 
                 <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
                 </li>                 
-                <li> <a href="lokalnie.html" style="font-size: 12px;">LOKALNIE</a> 
+                <li> <a href="lokalnie.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">LOKALNIE</a> 
                 </li>                 
-                <li> <a href="dobrze.html" style="font-size: 12px;">DOBRZE NA DZIŚ</a> 
+                <li> <a href="dobrze.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li> <a href="notpl.html" style="font-size: 12px;">OBYWATELE NIE-PL</a> 
+                <li> <a href="notpl.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">OBYWATELE NIE-PL</a> 
                 </li>                 
-                <li> <a href="kartka.html" style="font-size: 12px;">KARTKA Z HISTORII</a> 
+                <li> <a href="kartka.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li> <a href="de/chronograf.html" style="font-size: 12px;">DANZIGER CHRONOGRAF</a> 
+                <li> <a href="de/chronograf.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </nav>         
@@ -125,35 +124,25 @@ zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjneg
                     <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no" onload="console.log('cal.html loaded successfully in iframe');" onerror="console.error('Error loading cal.html in iframe');"> 
 </iframe>                     
                 </div>                 
-                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
-                <div class="support-newsletter-section">
-                    <iframe
-                      src="support.html"
-                      width="100%"
-                      height="180"
-                      style="border: none; max-width: 280px; display: block; margin: 0 auto;"
-                      scrolling="no">
-                    </iframe>
-                </div>
+                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>                 
+                <div class="support-newsletter-section"> 
+                    <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
+</iframe>                     
+                </div>                 
             </div>             
         </div>         
-        <div class="mobile-bottom-gadgets-container">
-            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
-            <div class="support-newsletter-section">
-                <iframe
-                  src="support.html"
-                  width="100%"
-                  height="180"
-                  style="border: none; max-width: 280px; display: block; margin: 0 auto;"
-                  scrolling="no">
-                </iframe>
-            </div>
-            <div class="ads google sidebar-bottom-ad">
-                <p>Reklama Google (na dole sidebara)</p>
-            </div>
-        </div>
+        <div class="mobile-bottom-gadgets-container"> 
+            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>             
+            <div class="support-newsletter-section"> 
+                <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
+</iframe>                 
+            </div>             
+            <div class="ads google sidebar-bottom-ad"> 
+                <p>Reklama Google (na dole sidebara)</p> 
+            </div>             
+        </div>         
         <footer> 
-            </footer>         
+</footer>         
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
