--- a/chronograf.html
+++ b/chronograf.html
@@ -33,11 +33,11 @@
                 </li>                 
                 <li> <a href="../dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li> <a href="../notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
+                <li> <a href="../notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 10px; line-height: 1px;">OBYWATELE NIE PL</a> 
                 </li>                 
-                <li> <a href="../kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a> 
+                <li> <a href="../kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 10px; line-height: 0.5;">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li> <a href="./chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
+                <li> <a href="./chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 10px; line-height: 1;">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </nav>         
